--- a/common-util/src/main/resources/log4j.properties
+++ b/common-util/src/main/resources/log4j.properties
@@ -17,7 +17,7 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%r [%t] [%p] - %c -%l -%m%n  
 
 log4j.appender.file1=org.apache.log4j.RollingFileAppender 
-log4j.appender.file1.File=log\debug.log 
+log4j.appender.file1.File=log/debug.log 
 log4j.appender.file1.Append=true 
 log4j.appender.file1.Threshold=DEBUG 
 log4j.appender.file1.MaxFileSize=2000KB 
@@ -26,7 +26,7 @@ log4j.appender.file1.layout=org.apache.log4j.PatternLayout
 log4j.appender.file1.layout.ConversionPattern=%d %-5p [%t]: %m%n 
 
 log4j.appender.file2=org.apache.log4j.RollingFileAppender 
-log4j.appender.file2.File=log\info.log 
+log4j.appender.file2.File=log/info.log 
 log4j.appender.file2.Append=true 
 log4j.appender.file2.Threshold=INFO 
 log4j.appender.file2.MaxFileSize=2000KB 
@@ -35,7 +35,7 @@ log4j.appender.file2.layout=org.apache.log4j.PatternLayout
 log4j.appender.file2.layout.ConversionPattern=%d %-5p [%t] [%l]: %m%n 
 
 log4j.appender.file3=org.apache.log4j.RollingFileAppender 
-log4j.appender.file3.File=log\error.log 
+log4j.appender.file3.File=log/error.log 
 log4j.appender.file3.Append=true 
 log4j.appender.file3.Threshold=ERROR
 log4j.appender.file3.MaxFileSize=2000KB 
