--- a/common-util/pom.xml
+++ b/common-util/pom.xml
@@ -65,7 +65,11 @@
 			<version>1.9.3</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.30</version>
+		</dependency>
 	</dependencies>
 
 	<build>
